RESOLVED FIXED35218
False warnings about needing layout in -[WebHTMLView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:]
https://bugs.webkit.org/show_bug.cgi?id=35218
Summary False warnings about needing layout in -[WebHTMLView _recursiveDisplayRectIfN...
mitz
Reported 2010-02-21 13:11:12 PST
Patch forthcoming
Attachments
Patch (2.26 KB, patch)
2010-02-21 13:14 PST, mitz
darin: review+
mitz
Comment 1 2010-02-21 13:14:17 PST
Darin Adler
Comment 2 2010-02-21 13:17:08 PST
Comment on attachment 49165 [details] Patch r=me
mitz
Comment 3 2010-02-21 13:19:37 PST
Note You need to log in before you can comment on or make changes to this bug.