False warnings about needing layout in -[WebHTMLView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:] https://bugs.webkit.org/show_bug.cgi?id=35218

Reviewed by Darin Adler.

* WebView/WebHTMLView.mm:
(-[WebHTMLView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:]):
Suppress the warning and the forced layout if the view is not being drawn
in this display operation.



Canonical link: https://commits.webkit.org/46367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55064 268f45cc-cd09-0410-ab3c-d52691b4dbfc